# DES_Adaptive-Application

./: .gitignore  AEB.md  CMakeLists.txt  ExecutionManifest.json  LKAS.md  PosixExecutor.hpp  README.md  Rpi_cam.slx  SoATest.slx.autosave  SoATest.slxc  control.slx  control.slxc  last.cpp  last.h  last_ExecutionManifest.arxml  last_component.arxml  last_datatype.arxml  last_interface.arxml  last_private.h  main.cpp  providedinterface_skeleton.h  requiredinterface_proxy.h  rtw_proj.tmw  tcp_client.slx  tcp_server.slx  test.slx.autosave  test.slxc
CreateAndConfigureAUTOSARAdaptiveSoftwareComponentExample/LaneGuidance_autosar_adaptive/: CMakeLists.txt  LaneGuidance.cpp  LaneGuidance.h  LaneGuidance_ExecutionManifest.arxml  LaneGuidance_ServiceInstanceManifest.arxml  LaneGuidance_component.arxml  LaneGuidance_datatype.arxml  LaneGuidance_interface.arxml  LaneGuidance_private.h  LaneGuidance_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  main.cpp  rtw_proj.tmw
CreateAndConfigureAUTOSARAdaptiveSoftwareComponentExample/LaneGuidance_autosar_adaptive/html/: traceInfo.mat
CreateAndConfigureAUTOSARAdaptiveSoftwareComponentExample/LaneGuidance_autosar_adaptive/stub/: MachineManifest.arxml  MiddlewareLog.txt
CreateAndConfigureAUTOSARAdaptiveSoftwareComponentExample/LaneGuidance_autosar_adaptive/tmwinternal/: simulink_cache.xml  tr
LKAS_control_steering/: CMakeLists.txt  ExecutionManifest.json  ServiceInstanceManifest.json  Timer.hpp  WorkerPool.hpp  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  control.cpp  control.h  control_ExecutionManifest.arxml  control_ServiceInstanceManifest.arxml  control_component.arxml  control_datatype.arxml  control_interface.arxml  main.cpp  rtw_proj.tmw
LKAS_control_steering/ara/com/: instance_identifier.cpp  proxy_event.h  service_factory.cpp
LKAS_control_steering/stub/: MachineManifest.arxml  MiddlewareLog.txt
LKAS_control_steering/stub/aragen/: AdaptiveAUTOSARDDSIdl.idl  ProvidedInterface_araDynamicEventDDS.h  ProvidedInterface_araDynamicEventSOMEIP.h  RequiredInterface_araDynamicEventDDS.h  RequiredInterface_araDynamicEventSOMEIP.h  RequiredInterface_araDynamicMethodSOMEIP.h  providedinterface_common.h  providedinterface_skeleton.h  requiredinterface_common.h  requiredinterface_proxy.h
LKAS_control_steering/tmwinternal/: simulink_cache.xml  tr
Rpi/LKAS_ert_rtw/: CMakeLists.txt  LKAS.cpp  LKAS.h  LKAS.mk  LKAS_data.cpp  LKAS_manifest.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  rtmodel.h  rtwtypes.h  rtwtypeschksum.mat
Rpi/LKAS_ert_rtw/tmwinternal/: simulink_cache.xml  tr
client_autosar_adaptive/: CMakeLists.txt  ExecutionManifest.json  ServiceInstanceManifest.json  VSomeIPConfig.json  buildInfo.mat  client.cpp  client.h  client_ExecutionManifest.arxml  client_ServiceInstanceManifest.arxml  client_component.arxml  client_datatype.arxml  client_interface.arxml  client_private.h  client_types.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  main.cpp  requiredinterface_proxy.h  rtw_proj.tmw
client_autosar_adaptive/ara/com/: event_factory.h  find_service_handle.h  handle_type.h  instance_identifier.cpp  instance_identifier.h  instance_identifier_container.h  proxy_event.h  resolve_instance.cpp  resolve_instance.h  sampleptr.h  service_factory.cpp  service_factory.h  service_handle_container.h  skeleton_event.h
client_autosar_adaptive/ara/core/: instance_specifier.h
client_autosar_adaptive/ara/log/: logger.h
client_autosar_adaptive/stub/: MachineManifest.arxml  MiddlewareLog.txt
client_autosar_adaptive/stub/aragen/: ProvidedInterface_araDynamicEventSOMEIP.h  providedinterface_common.h  requiredinterface_common.h
client_autosar_adaptive/tmwinternal/: simulink_cache.xml  tr
control_autosar_adaptive/: CMakeLists.txt  ExecutionManifest.json  VSomeIPConfig.json  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  control.cpp  control.h  control_ExecutionManifest.arxml  control_ServiceInstanceManifest.arxml  control_component.arxml  control_datatype.arxml  control_interface.arxml  main.cpp  requiredinterface_proxy.h
control_autosar_adaptive/stub/: MachineManifest.arxml  MiddlewareLog.txt
control_autosar_adaptive/stub/aragen/: ProvidedInterface_araDynamicMethodSOMEIP.h  providedinterface_common.h  requiredinterface_common.h  requiredinterface_proxy.h
control_autosar_adaptive/tmwinternal/: simulink_cache.xml  tr
server_autosar_adaptive/: CMakeLists.txt  ExecutionManifest.json  ServiceInstanceManifest.json  VSomeIPConfig.json  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  main.cpp  providedinterface_skeleton.h  rtw_proj.tmw  server.cpp  server.h  server_ExecutionManifest.arxml  server_ServiceInstanceManifest.arxml  server_component.arxml  server_datatype.arxml  server_interface.arxml  server_private.h  server_types.h
server_autosar_adaptive/ara/com/: find_service_handle.h  handle_type.h  instance_identifier.cpp  instance_identifier.h  instance_identifier_container.h  proxy_event.h  resolve_instance.h  service_factory.cpp  service_factory.h  skeleton_event.h
server_autosar_adaptive/ara/log/: log_stream.h  logger.cpp
server_autosar_adaptive/stub/: MachineManifest.arxml  MiddlewareLog.txt
server_autosar_adaptive/stub/aragen/: ProvidedInterface_araDynamicEventSOMEIP.h  providedinterface_common.h  providedinterface_skeleton.h
server_autosar_adaptive/tmwinternal/: simulink_cache.xml  tr
ultrasonic_autosar_adaptive/: CMakeLists.txt  ExecutionManifest.json  ServiceInstanceManifest.json  VSomeIPConfig.json  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  main.cpp  rtw_proj.tmw  ultrasonic.cpp  ultrasonic.h  ultrasonic.mk  ultrasonic_ExecutionManifest.arxml  ultrasonic_ServiceInstanceManifest.arxml  ultrasonic_component.arxml  ultrasonic_datatype.arxml  ultrasonic_interface.arxml  ultrasonic_manifest.txt  ultrasonic_private.h  ultrasonic_types.h
ultrasonic_autosar_adaptive/stub/: MachineManifest.arxml  MiddlewareLog.txt
ultrasonic_autosar_adaptive/tmwinternal/: simulink_cache.xml  tr
(+1573 files in other folders)
